--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="center">
+	android:layout_height="match_parent">
 
 	<TextView
-		android:text="@string/hello_world"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content"
+		android:text="Android Boot Manager is installed successfully (atleast it seems so) but the App is not yet finished :("
+		android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
 
