--- a/app/src/main/res/layout/cfg.xml
+++ b/app/src/main/res/layout/cfg.xml
@@ -1,6 +1,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
+	
+	<!-- Toolbar -->
+		
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="match_parent"
+		android:layout_height="?attr/actionBarSize"
+		android:background="@color/colorPrimary"
+		android:gravity="center_vertical"
+		app:layout_collapseMode="pin"
+		app:layout_scrollFlags="scroll|enterAlways"
+		app:theme="@style/MyToolbarTheme"
+		app:title="@string/configurator"/>
+		
+	<!-- /Toolbar -->
+	
+	<android.support.design.widget.TabLayout
+		android:id="@+id/tabLayout"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:minHeight="?actionBarSize"
+		app:tabGravity="fill"
+		app:tabIndicatorColor="@color/white"
+		app:tabIndicatorHeight="4dp"
+		app:tabBackground="@color/colorPrimary"
+		app:tabMode="fixed">
+		</android.support.design.widget.TabLayout>
+		<android.support.v4.view.ViewPager
+		android:id="@+id/viewPager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+		</android.support.v4.view.ViewPager>
     
 </LinearLayout>
