--- a/app/src/main/res/layout/tab_general.xml
+++ b/app/src/main/res/layout/tab_general.xml
@@ -8,7 +8,7 @@
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="theme"
+		android:text="general"
 		android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
