--- a/app/src/main/res/layout/tab_entry.xml
+++ b/app/src/main/res/layout/tab_entry.xml
@@ -6,7 +6,7 @@
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="general"
+		android:text="entry"
 		android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
