--- a/app/src/main/res/layout/cfg.xml
+++ b/app/src/main/res/layout/cfg.xml
@@ -1,11 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-	
-	<!-- Toolbar -->
-		
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical">
+
 	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
@@ -16,9 +16,7 @@
 		app:layout_scrollFlags="scroll|enterAlways"
 		app:theme="@style/MyToolbarTheme"
 		app:title="@string/configurator"/>
-		
-	<!-- /Toolbar -->
-	
+
 	<android.support.design.widget.TabLayout
 		android:id="@+id/tabLayout"
 		android:layout_width="match_parent"
@@ -29,11 +27,16 @@
 		app:tabIndicatorHeight="4dp"
 		app:tabBackground="@color/colorPrimary"
 		app:tabMode="fixed">
-		</android.support.design.widget.TabLayout>
-		<android.support.v4.view.ViewPager
+
+	</android.support.design.widget.TabLayout>
+
+	<android.support.v4.view.ViewPager
 		android:id="@+id/viewPager"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-		</android.support.v4.view.ViewPager>
-    
+		android:layout_height="match_parent"
+		android:layout_gravity="fill">
+
+	</android.support.v4.view.ViewPager>
+
 </LinearLayout>
+
