--- a/app/src/main/res/layout/tab_general.xml
+++ b/app/src/main/res/layout/tab_general.xml
@@ -5,11 +5,62 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
 
-	<TextView
-		android:layout_width="wrap_content"
+	<TableLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
+
+		<TableRow
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Timeout"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_gravity="center_vertical"
+				android:layout_column="1"/>
+
+			<EditText
+				android:layout_width="wrap_content"
+				android:inputType="number"
+				android:layout_height="wrap_content"
+				android:ems="10"
+				android:layout_gravity="right"
+				android:layout_column="2"
+				android:id="@+id/tabgeneralSettingTimeout"/>
+
+		</TableRow>
+
+		<TableRow
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Default Entry"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_column="1"
+				android:layout_gravity="center_vertical"/>
+
+			<EditText
+				android:layout_width="wrap_content"
+				android:ems="10"
+				android:layout_height="wrap_content"
+				android:layout_column="2"
+				android:id="@+id/tabgeneralSettingDefaultEntry"/>
+
+		</TableRow>
+
+	</TableLayout>
+
+	<Button
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="general"
-		android:textAppearance="?android:attr/textAppearanceLarge"/>
+		android:text="Save"
+		android:id="@+id/tabgeneralSave"
+		android:layout_gravity="bottom"/>
 
 </LinearLayout>
 
