--- a/app/src/main/res/layout/tab_general.xml
+++ b/app/src/main/res/layout/tab_general.xml
@@ -16,7 +16,7 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="Timeout"
+				android:text="@string/timeout"
 				android:textAppearance="?android:attr/textAppearanceMedium"
 				android:layout_gravity="center_vertical"
 				android:layout_column="1"/>
@@ -39,7 +39,7 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="Default Entry"
+				android:text="@string/default_entry"
 				android:textAppearance="?android:attr/textAppearanceMedium"
 				android:layout_column="1"
 				android:layout_gravity="center_vertical"/>
@@ -58,7 +58,7 @@
 	<Button
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="Save"
+		android:text="@string/save"
 		android:id="@+id/tabgeneralSave"
 		android:layout_gravity="bottom"/>
 
