--- a/app/src/main/res/layout/tab_rom.xml
+++ b/app/src/main/res/layout/tab_rom.xml
@@ -5,11 +5,10 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="rom"
-		android:textAppearance="?android:attr/textAppearanceLarge"/>
+	<ListView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/tabromListView"/>
 
 </LinearLayout>
 
