--- a/app/src/main/res/layout/cfg.xml
+++ b/app/src/main/res/layout/cfg.xml
@@ -6,7 +6,7 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
 
-	<android.support.v7.widget.Toolbar
+	<com.google.android.material.appbar.MaterialToolbar
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
@@ -17,7 +17,7 @@
 		app:theme="@style/MyToolbarTheme"
 		app:title="@string/configurator"/>
 
-	<android.support.design.widget.TabLayout
+	<com.google.android.material.tabs.TabLayout
 		android:id="@+id/tabLayout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -28,15 +28,15 @@
 		app:tabBackground="@color/colorPrimary"
 		app:tabMode="fixed">
 
-	</android.support.design.widget.TabLayout>
+	</com.google.android.material.tabs.TabLayout>
 
-	<android.support.v4.view.ViewPager
+	<androidx.viewpager2.widget.ViewPager2
 		android:id="@+id/viewPager"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_gravity="fill">
 
-	</android.support.v4.view.ViewPager>
+	</androidx.viewpager2.widget.ViewPager2>
 
 </LinearLayout>
 
