--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
 	</style>
 	<style name="MyToolbarTheme"
@@ -8,6 +8,6 @@
 		<item name="titleTextColor">@color/white</item>
 	</style>
 	<color name="colorPrimary">#FE9200</color>
-	<color name="colorAccent">#FE9200</color>
+	<color name="colorAccent" tools:ignore="UnusedResources">#FE9200</color>
 	<color name="white">#FFFFFF</color>
 </resources>
