--- a/app/src/main/res/layout/edit_rom.xml
+++ b/app/src/main/res/layout/edit_rom.xml
@@ -37,7 +37,7 @@
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/data_partition"
+			android:text="@string/rom_location"
 			android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 		<TextView
@@ -50,26 +50,6 @@
 
 	</LinearLayout>
 
-	<LinearLayout
-		android:orientation="horizontal"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/system_partition"
-			android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="[error]"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:id="@+id/editromSystemPart"
-			tools:ignore="HardcodedText" />
-
-	</LinearLayout>
 
 </LinearLayout>
 
