--- a/app/src/main/res/layout/cfg.xml
+++ b/app/src/main/res/layout/cfg.xml
@@ -14,7 +14,7 @@
 		android:gravity="center_vertical"
 		app:layout_collapseMode="pin"
 		app:layout_scrollFlags="scroll|enterAlways"
-		app:theme="@style/MyToolbarTheme"
+		android:theme="@style/MyToolbarTheme"
 		app:title="@string/configurator"/>
 
 	<com.google.android.material.tabs.TabLayout
