--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,7 +13,7 @@
 		android:gravity="center_vertical"
 		app:layout_collapseMode="pin"
 		app:layout_scrollFlags="scroll|enterAlways"
-		app:theme="@style/MyToolbarTheme"
+		android:theme="@style/MyToolbarTheme"
 		app:title="@string/app_name"/>
 
 	<Button
