--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="aboutLibrariesStyle">@style/CustomAboutLibrariesStyle</item>
     </style>
 
-    <style name="MyToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Light">
+    <style name="MyToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.Light">
         <item name="colorControlNormal">@color/white</item>
         <item name="titleTextColor">@color/white</item>
     </style>
@@ -23,13 +23,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight" />
 
     <style name="CustomAboutLibrariesStyle" parent="AppTheme">
         <!-- AboutLibraries specific values -->
-        <item name="aboutLibrariesCardBackground">#FFFFFF</item>
+        <item name="aboutLibrariesCardBackground">?colorSurface</item>
         <item name="aboutLibrariesDescriptionTitle">?android:textColorPrimary</item>
         <item name="aboutLibrariesDescriptionText">?android:textColorSecondary</item>
         <item name="aboutLibrariesDescriptionDivider">@color/opensource_divider</item>
