--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorSecondary">@color/colorSecondary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="aboutLibrariesStyle">@style/CustomAboutLibrariesStyle</item>
+        <item name="android:statusBarColor">@color/colorAccent</item>
     </style>
 
     <style name="MyToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.Light">
