--- a/app/src/main/res/layout/wizardpage_fragment.xml
+++ b/app/src/main/res/layout/wizardpage_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/wizardpage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.wizard.WizardPageFragment">
+    tools:context=".ui.wizard.ExampleWizardPageFragment">
 
     <TextView
         android:id="@+id/wizardpage_message"
