--- a/app/src/main/res/layout/wizard_installer_finddevice.xml
+++ b/app/src/main/res/layout/wizard_installer_finddevice.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activities.SplashActivity">
+    android:layout_height="match_parent">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:layout_width="101dp"
-        android:layout_height="101dp"
-        android:indeterminate="true"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/wizard_installer_finddevice"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
