--- a/app/src/main/res/layout/wizard_installer_finddevice_element.xml
+++ b/app/src/main/res/layout/wizard_installer_finddevice_element.xml
@@ -2,15 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activities.SplashActivity">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:layout_width="101dp"
-        android:layout_height="101dp"
-        android:indeterminate="true"
+    <RadioButton
+        android:id="@+id/wizard_installer_finddevice_radio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
