--- a/app/src/main/res/layout/wizard_installer_welcome.xml
+++ b/app/src/main/res/layout/wizard_installer_welcome.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.gallery.GalleryFragment">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/wizard_installer_welcome_big"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome"
@@ -20,17 +20,16 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/installerWelcome"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/wizard_installer_welcome_disclaimer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/wizard_installer_welcome_big"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/wizard_installer_welcome_disclaimer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/be_careful"
