--- a/app/src/main/res/drawable-anydpi/ic_droidbooticon.xml
+++ b/app/src/main/res/drawable-anydpi/ic_droidbooticon.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
+    android:tint="?attr/colorControlNormal"
     android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
