Some more things

--- a/app/src/main/res/layout/wizard_installer_welcome.xml
+++ b/app/src/main/res/layout/wizard_installer_welcome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.GalleryFragment">
+    tools:context=".ui.roms.GalleryFragment">
 
     <TextView
         android:id="@+id/wizard_installer_welcome_big"
@@ -20,6 +20,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <TextView
+        android:id="@+id/wizard_installer_welcome_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/installerWelcome"
