--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_sd"
-        android:name="org.androidbootmanager.app.ui.roms.GalleryFragment"
+        android:name="org.androidbootmanager.app.ui.sdcard.SDCardFragment"
         android:label="@string/menu_sd"
         tools:layout="@layout/fragment_roms" />
 
