--- a/app/src/main/res/layout/create_part.xml
+++ b/app/src/main/res/layout/create_part.xml
@@ -100,6 +100,25 @@
                 android:layout_height="wrap_content" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:labelFor="@id/create_part_label"
+                android:text="@string/label" />
+
+            <EditText
+                android:id="@+id/create_part_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:importantForAutofill="no" />
+        </TableRow>
+
     </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
