--- a/app/src/main/res/layout/fragment_roms.xml
+++ b/app/src/main/res/layout/fragment_roms.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.roms.GalleryFragment">
+    tools:context=".ui.roms.ROMFragment">
 
     <TextView
         android:id="@+id/text_gallery"
